# su-memory-sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ANALYSIS_INDEX.md  ARCHITECTURE_NOTES.md  AUTOMATED_LICENSING.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  GITHUB_DEPLOY_GUIDE.md  HINDSIGHT_OVERTAKE_PLAN.md  ISSUE_ANALYSIS_AND_FIX_PLAN.md  LEADERBOARD.md  LICENSE  PAYMENT.md  PLAN_VG_RAG.md  PRODUCT_ONE_PAGER.md  QC-AUDIT-REPORT-v3.6.0.md  QC_AUDIT_V3.5.0_2026-06-02.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v3.5.0.md  SDK_TEST_REPORT.md  SECURITY.md  SPEC.md  SPRINT_PLAN_SDK_FIRST.md  SURPASS_HINDSIGHT_PLAN.md  TEST_REPORT.md  THEORY_ARCHITECTURE_MAPPING.md  benchmark_test.py  demo_interactive.py  docker-compose.yml  generate_docx_report.js  generate_test_report_v2.js  hf_upload.py  hf_upload.sh  hp_search_results.json  (+19 more)
.github/workflows/: ci.yml  perf-gate.yml
backups/: backup_20260426_194107.meta.json  backup_20260629_103844.meta.json  backup_20260629_105115.meta.json  backup_20260629_113416.meta.json  backup_20260629_115724.meta.json  backup_20260629_120346.meta.json  backup_20260629_122833.meta.json  backup_20260629_123208.meta.json  backup_20260710_002750.meta.json  backup_20260710_003028.meta.json  backup_20260710_003558.meta.json  backup_20260710_003818.meta.json  backup_20260710_003819.meta.json  backup_20260710_005511.meta.json  backup_20260710_093316.meta.json  backup_20260718_005041.meta.json  backup_20260718_005517.meta.json  backup_my_backup.meta.json
benchmarks/: BENCHMARK_REPORT.md  __init__.py  _cluster_utils.py  _model_router.py  _noise_generator.py  ab_causal_vs_statistical.py  ab_hotpotqa_real.py  ablation_algebra.py  ablation_fallback.py  ablation_temporal.py  beir.py  bench_add.py  bench_add_batch.py  bench_arm_native.py  bench_async.py  bench_concurrency.py  bench_faiss.py  bench_memory.py  bench_multihop.py  bench_pgvector.py  bench_query.py  benchmark_causal_discovery.py  benchmark_results.json  benchmark_results_v354_medium.json  benchmark_results_v354_p1.json  benchmark_results_v354_p2.json  benchmark_results_v355_medium.json  benchmark_scaling.py  benchmark_sdk.py  benchmark_v3.0.0.py  benchmark_v355_comprehensive.py  compare_v250_vs_v201.py  config.py  convomem_eval.py  fast_bench.py  fever_eval.py  gaia_benchmark_results.json  hindsight_comparison_report.json  hotpotqa.py  hotpotqa_api_eval.py  (+20 more)
benchmarks/data/: hotpotqa_validation_200.json  hotpotqa_validation_3.json  hotpotqa_validation_5.json  hotpotqa_validation_50.json
benchmarks/results/: HOTPOTQA_FINAL.md  HOTPOTQA_LOCAL_EVAL.md  LEADERBOARD.md  README.md  ablation_algebra.json  ablation_bm25_on_50.txt  ablation_fallback.json  ablation_temporal.json  beir_nfcorpus.json  beir_results.json  beir_v357.json  beir_v357.txt  beir_v357_ollama.json  beir_v357_ollama.txt  benchmark_v355_comprehensive_20260605_110510.json  benchmark_v355_comprehensive_20260605_192831.json  (+73 more)
codalab/: README.md  hotpotqa_submit.py  predictions.json  predictions_list.json  run.sh
codalab_submission/: Dockerfile  requirements.txt  run.py
deploy/: PIPEDREAM_DEPLOY_GUIDE.md  debug_workflow.py  interactive_pipedream.py  pipedream-alipay-workflow.js  pipedream-clean.js  pipedream-simple-workflow.js  setup_pipedream.py  start.sh  update_pipedream.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASYNC_GUIDE.md  EMBEDDING_GUIDE.md  KPI-实施规划书.md  MCI_World_Model_v3.5.0_LaTeX.html  MCI_World_Model_v3.5.0_LaTeX.tex  MCI_World_Model_v3.5.0_Paper.md  MCI_世界模型_v3.5.0_修订版.docx  MCI_世界模型_v3.5.0_修订版.md  MCI_世界模型_v3.5.0_学术论文.md  MIGRATION_v2.5_to_v2.6.md  MIGRATION_v2.7_to_v3.0.md  PATENT_ABLATION_REPORT.md  PAYMENT_INTEGRATION.md  PERFORMANCE.md  PGVECTOR_DEPLOY.md  RELEASE_CHECKLIST.md  ROADMAP_v1.5.0_v1.7.0.md  ROADMAP_v2.5_AGI.md  ROADMAP_v2.6.0.md  TEST_REPORT_v1.7.0.md  USER_GUIDE.md  concurrency_audit.md  fallback-matrix.md  sigreg_faiss_technical_note.md  sprint1_implementation_plan.md  sprint2_completion_report.md  sprint3_completion_report.md  su-memory论文框架.md  修复计划_v1.7.1.md  对企业API接口文档.md  对企业交付手册.md  技术迭代实施计划-v3.4.0.md  技术迭代实施计划-v3.5.0.md  技术迭代规划书-v3.1.0-v3.3.0.md  技术迭代规划书-v3.4.0.md  本地优先训练路线重评估.md  精强化研究.md
examples/: causal_reasoning.py  claw_memory_bridge.py  complete_demo.py  cross_session_recall.py  demo_colab.ipynb  demo_v1.7_features.py  install_license.py  migrate_data.py  prediction_module.py  quick_start.py  quickstart.py  temporal_awareness.py  wiki_memory_integration.py
frontend/: index.html  package.json  payment.html  vite.config.js
gateway/: __init__.py  auth.py  middleware.py  router.py
llm_adapter/: __init__.py  openai_compat.py
memory_engine/: __init__.py  conflict_resolver.py  extractor.py  forgetting.py  manager.py  retriever.py
migration_test_storage/: su_memory_pro.json
scripts/: __init__.py  check_perf_gate.py  eval_m3_quality.py  gen_all_pdfs.py  gen_venue_tex.py  generate_paper.js  generate_revised_paper.py  hp_search_m4.py  html_to_pdf.py  m4.py  test_m4_inference.py  train_m3_e2e.py  train_m3_real.py
su_core/: __init__.py
tests/: benchmark_v1.7.py  conftest.py  quick_test.py  test_adaptive_engine.py  test_add_batch_performance.py  test_algebra_affinity.py  test_algebra_basis.py  test_algebra_belief_net.py  test_algebra_causal_graph.py  test_algebra_projector.py  test_algebra_temporal.py  test_algebra_tensor.py  test_api_gateway_comprehensive.py  test_association_kb.py  test_bayesian_augmenter.py  test_bayesian_augmenter_m2.py  test_bayesian_system.py  test_benchmark.py  test_cli.py  test_clinical_client.py  test_compliance.py  test_compression_comprehensive.py  test_concurrency.py  test_concurrency_p2.py  test_confidence.py  test_counterfactual.py  test_counterfactual_integration.py  test_do_calculus.py  test_document_pipeline.py  test_dual_time.py  test_durability.py  test_e2e_workflows.py  test_edge_cases.py  test_edge_confidence.py  test_embedding_backends_v352.py  test_energy_dynamics_invariants.py  test_energy_loss.py  test_energy_system_enhanced.py  test_extractor.py  test_faiss_index.py  (+83 more)
(+392 files in other folders)
