[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su-memory"
version = "2.5.1"
description = "让你的AI拥有记忆 - 本地优先的语义记忆引擎，LLM能量推断、多跳推理、FAISS向量检索"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "su-memory Team", email = "team@su-memory.ai" }
]
keywords = [
    "memory", "ai-memory", "zep", "mem0",
    "semantic-memory", "knowledge-base", "vector-store",
    "multi-hop", "spacetime", "rag"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
storage = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
# 完整安装：pip install su-memory[full]
full = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
# Dashboard：pip install su-memory[dashboard]
dashboard = [
    "flask>=3.0.0",
]
# REST API：pip install su-memory[api]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
# Payment：支付宝企业支付（由 Pipedream 工作流处理，SDK 无需本地依赖）
payment = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://su-memory.ai"
Repository = "https://github.com/su-memory/su-memory-sdk"
Issues = "https://github.com/su-memory/su-memory-sdk/issues"

[project.scripts]
su-memory = "su_memory.cli.commands:main"
su-memory-diag = "su_memory.diagnostics:main"
su-memory-dashboard = "su_memory.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
su_memory = ["py.typed"]

[tool.ruff]
line-length = 100
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
