[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su-memory"
version = "3.5.3"
description = "语义记忆引擎 - 插件化体系 + 分布式存储 (PostgreSQL/Redis/SQLite)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "su-memory Team", email = "team@su-memory.ai" }
]
keywords = [
    "memory", "ai-memory", "zep", "mem0",
    "semantic-memory", "knowledge-base", "vector-store",
    "multi-hop", "spacetime", "rag"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.10.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
storage = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
# pgvector：pip install su-memory[pgvector]
pgvector = [
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
]
# 异步客户端：pip install su-memory[async]
async = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    # F6-P0-1: embedding.py 中 aiohttp.ClientSession 实际使用
    "aiohttp>=3.9.0",
]
# Redis 后端：pip install su-memory[redis]
redis = [
    "redis[hiredis]>=5.0.0",
]
# 完整安装：pip install su-memory[full]
full = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "redis[hiredis]>=5.0.0",
]
# Dashboard：pip install su-memory[dashboard]
dashboard = [
    "flask>=3.0.0",
]
# REST API：pip install su-memory[api]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
# World Model：参数化记忆 + QLoRA 训练 (v3.6.0)
world-model = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "safetensors>=0.4.0",
    "accelerate>=0.28.0",
]
# Apple Silicon MLX 原生加速（M 系列芯片推荐）
mlx = [
    "mlx>=0.12.0",
    "mlx-lm>=0.14.0",
]
# llama.cpp GGUF 本地推理: pip install su-memory[llama-cpp]
llama-cpp = [
    "llama-cpp-python>=0.3.0",
]
# Voyage AI: pip install su-memory[voyage]
voyage = [
    "voyageai>=0.3.0",
]
# Cohere Embed v3: pip install su-memory[cohere]
cohere = [
    "cohere>=5.0.0",
]
# Google Gemini: pip install su-memory[google]
google = [
    "google-generativeai>=0.8.0",
]
# ONNX Runtime 本地推理: pip install su-memory[onnx]
onnx = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.19.0",
]
# Payment：支付宝企业支付（由 Pipedream 工作流处理，SDK 无需本地依赖）
payment = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "coverage[toml]>=7.0",
    "ruff>=0.4.0",
]
# 文档生成：pip install su-memory[docs]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://su-memory.ai"
Repository = "https://github.com/su-memory/su-memory-sdk"
Issues = "https://github.com/su-memory/su-memory-sdk/issues"

[project.scripts]
su-memory = "su_memory.cli.commands:main"
su-memory-diag = "su_memory.diagnostics:main"
su-memory-dashboard = "su_memory.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
su_memory = ["py.typed"]

[tool.ruff]
extend = "../harness-configs/python/ruff-base.toml"
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/su_memory"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
    "smoke: marks tests as smoke tests — core pipeline not crashing",
    "jepa: marks tests covering JEPA encoder/predictor/trainer modules",
    "causal: marks tests covering causal discovery/graph structure modules",
    "e2e: marks end-to-end training/inference tests (M3 GAT+GNN)",
    "integration: marks tests as integration tests requiring external services",
    "pgvector: marks tests requiring PostgreSQL + pgvector",
    "redis: marks tests requiring Redis",
]
