[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su-memory"
version = "4.0.0"
description = "语义记忆引擎 - 插件化体系 + 分布式存储 (PostgreSQL/Redis/SQLite)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "su-memory Team", email = "team@su-memory.ai" }
]
keywords = [
    "memory", "ai-memory", "zep", "mem0",
    "semantic-memory", "knowledge-base", "vector-store",
    "multi-hop", "spacetime", "rag"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
storage = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
# pgvector：pip install su-memory[pgvector]
pgvector = [
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
]
# 异步客户端：pip install su-memory[async]
async = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
]
# Redis 后端：pip install su-memory[redis]
redis = [
    "redis[hiredis]>=5.0.0",
]
# 完整安装：pip install su-memory[full]
full = [
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "redis[hiredis]>=5.0.0",
]
# Dashboard：pip install su-memory[dashboard]
dashboard = [
    "flask>=3.0.0",
]
# REST API：pip install su-memory[api]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
# Payment：支付宝企业支付（由 Pipedream 工作流处理，SDK 无需本地依赖）
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
# 文档生成：pip install su-memory[docs]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://su-memory.ai"
Repository = "https://github.com/su-memory/su-memory-sdk"
Issues = "https://github.com/su-memory/su-memory-sdk/issues"

[project.scripts]
su-memory = "su_memory.cli.commands:main"
su-memory-diag = "su_memory.diagnostics:main"
su-memory-dashboard = "su_memory.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
su_memory = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/su_memory"]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "invariant: L0 数学不变式 (守恒律, 必须通过)",
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "pgvector: marks tests requiring PostgreSQL + pgvector",
    "redis: marks tests requiring Redis",
]
